WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56155
[EFL] Fix build break when SHARED_CORE is ON
https://bugs.webkit.org/show_bug.cgi?id=56155
Summary
[EFL] Fix build break when SHARED_CORE is ON
Gyuyoung Kim
Reported
2011-03-10 17:17:39 PST
There is a build break when SHARED_CORE is ON as below, MakeFiles/webcore_efl.dir/platform/efl/ContextMenuEfl.cpp.o: In function `WebCore::ContextMenu::ContextMenu()': ContextMenuEfl.cpp:(.text+0x0): multiple definition of `WebCore::ContextMenu::ContextMenu()' CMakeFiles/webcore_efl.dir/platform/ContextMenu.cpp.o:ContextMenu.cpp:(.text+0x0): first defined here CMakeFiles/webcore_efl.dir/platform/efl/ContextMenuEfl.cpp.o: In function `WebCore::ContextMenu::ContextMenu()': ContextMenuEfl.cpp:(.text+0x20): multiple definition of `WebCore::ContextMenu::ContextMenu()' CMakeFiles/webcore_efl.dir/platform/ContextMenu.cpp.o:ContextMenu.cpp:(.text+0x20): first defined here CMakeFiles/webcore_efl.dir/platform/efl/ContextMenuItemEfl.cpp.o: In function `WebCore::ContextMenuItem::ContextMenuItem(WebCore::ContextMenuItemType, WebCore::ContextMenuAction, WTF::String const&, WebCore::ContextMenu*)': ContextMenuItemEfl.cpp:(.text+0x60): multiple definition of `WebCore::ContextMenuItem::ContextMenuItem(WebCore::ContextMenuItemType, WebCore::ContextMenuAction, WTF::String const&, WebCore::ContextMenu*)' CMakeFiles/webcore_efl.dir/platform/ContextMenuItem.cpp.o:ContextMenuItem.cpp:(.text+0x480): first defined here CMakeFiles/webcore_efl.dir/platform/efl/ContextMenuItemEfl.cpp.o: In function `WebCore::ContextMenuItem::ContextMenuItem(WebCore::ContextMenuItemType, WebCore::ContextMenuAction, WTF::String const&, WebCore::ContextMenu*)': ContextMenuItemEfl.cpp:(.text+0x90): multiple definition of `WebCore::ContextMenuItem::ContextMenuItem(WebCore::ContextMenuItemType, WebCore::ContextMenuAction, WTF::String const&, WebCore::ContextMenu*)' CMakeFiles/webcore_efl.dir/platform/ContextMenuItem.cpp.o:ContextMenuItem.cpp:(.text+0x410): first defined here CMakeFiles/webcore_efl.dir/platform/efl/ContextMenuItemEfl.cpp.o: In function `WebCore::ContextMenuItem::type() const': ContextMenuItemEfl.cpp:(.text+0xd0): multiple definition of `WebCore::ContextMenuItem::type() const' CMakeFiles/webcore_efl.dir/platform/ContextMenuItem.cpp.o:ContextMenuItem.cpp:(.text+0xb0): first defined here CMakeFiles/webcore_efl.dir/platform/efl/ContextMenuItemEfl.cpp.o: In function `WebCore::ContextMenuItem::setAction(WebCore::ContextMenuAction)': ContextMenuItemEfl.cpp:(.text+0xe0): multiple definition of `WebCore::ContextMenuItem::setAction(WebCore::ContextMenuAction)' CMakeFiles/webcore_efl.dir/platform/ContextMenuItem.cpp.o:ContextMenuItem.cpp:(.text+0xc0): first defined here CMakeFiles/webcore_efl.dir/platform/efl/ContextMenuItemEfl.cpp.o: In function `WebCore::ContextMenuItem::action() const': ContextMenuItemEfl.cpp:(.text+0xf0): multiple definition of `WebCore::ContextMenuItem::action() const' CMakeFiles/webcore_efl.dir/platform/ContextMenuItem.cpp.o:ContextMenuItem.cpp:(.text+0xd0): first defined here CMakeFiles/webcore_efl.dir/platform/efl/ContextMenuItemEfl.cpp.o: In function `WebCore::ContextMenuItem::setChecked(bool)': ContextMenuItemEfl.cpp:(.text+0x100): multiple definition of `WebCore::ContextMenuItem::setChecked(bool)' CMakeFiles/webcore_efl.dir/platform/ContextMenuItem.cpp.o:ContextMenuItem.cpp:(.text+0xe0): first defined here CMakeFiles/webcore_efl.dir/platform/efl/ContextMenuItemEfl.cpp.o: In function `WebCore::ContextMenuItem::checked() const': ContextMenuItemEfl.cpp:(.text+0x110): multiple definition of `WebCore::ContextMenuItem::checked() const' CMakeFiles/webcore_efl.dir/platform/ContextMenuItem.cpp.o:ContextMenuItem.cpp:(.text+0xf0): first defined here CMakeFiles/webcore_efl.dir/platform/efl/ContextMenuItemEfl.cpp.o: In function `WebCore::ContextMenuItem::setEnabled(bool)': ContextMenuItemEfl.cpp:(.text+0x120): multiple definition of `WebCore::ContextMenuItem::setEnabled(bool)' CMakeFiles/webcore_efl.dir/platform/ContextMenuItem.cpp.o:ContextMenuItem.cpp:(.text+0x100): first defined here CMakeFiles/webcore_efl.dir/platform/efl/ContextMenuItemEfl.cpp.o: In function `WebCore::ContextMenuItem::enabled() const': ContextMenuItemEfl.cpp:(.text+0x130): multiple definition of `WebCore::ContextMenuItem::enabled() const' CMakeFiles/webcore_efl.dir/platform/ContextMenuItem.cpp.o:ContextMenuItem.cpp:(.text+0x110): first defined here CMakeFiles/webcore_efl.dir/platform/efl/ContextMenuItemEfl.cpp.o: In function `WebCore::ContextMenuItem::setSubMenu(WebCore::ContextMenu*)': ContextMenuItemEfl.cpp:(.text+0x140): multiple definition of `WebCore::ContextMenuItem::setSubMenu(WebCore::ContextMenu*)' CMakeFiles/webcore_efl.dir/platform/ContextMenuItem.cpp.o:ContextMenuItem.cpp:(.text+0x360): first defined here CMakeFiles/webcore_efl.dir/platform/efl/ContextMenuItemEfl.cpp.o: In function `WebCore::ContextMenuItem::~ContextMenuItem()': ContextMenuItemEfl.cpp:(.text+0x150): multiple definition of `WebCore::ContextMenuItem::~ContextMenuItem()' CMakeFiles/webcore_efl.dir/platform/ContextMenuItem.cpp.o:ContextMenuItem.cpp:(.text+0x120): first defined here CMakeFiles/webcore_efl.dir/platform/efl/ContextMenuItemEfl.cpp.o: In function `WebCore::ContextMenuItem::~ContextMenuItem()': ContextMenuItemEfl.cpp:(.text+0x200): multiple definition of `WebCore::ContextMenuItem::~ContextMenuItem()' CMakeFiles/webcore_efl.dir/platform/ContextMenuItem.cpp.o:ContextMenuItem.cpp:(.text+0x1d0): first defined here collect2: ld returned 1 exit status make[2]: *** [WebCore/libwebcore_efl.so.0.1.0] Error 1 make[1]: *** [WebCore/CMakeFiles/webcore_efl.dir/all] Error 2
Attachments
Patch
(3.53 KB, patch)
2011-03-10 17:32 PST
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2011-03-10 17:32:09 PST
Created
attachment 85412
[details]
Patch
WebKit Commit Bot
Comment 2
2011-03-11 01:45:07 PST
Comment on
attachment 85412
[details]
Patch Clearing flags on attachment: 85412 Committed
r80833
: <
http://trac.webkit.org/changeset/80833
>
WebKit Commit Bot
Comment 3
2011-03-11 01:45:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug