2011-03-11  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

Unreviewed build error fix.

        [EFL] Fix build break when SHARED_CORE is ON
        https://bugs.webkit.org/show_bug.cgi?id=56155

        * platform/efl/ContextMenuEfl.cpp:
        (WebCore::ContextMenu::ContextMenu):
        * platform/efl/ContextMenuItemEfl.cpp:
        (WebCore::ContextMenuItem::nativeMenuItem):
        (WebCore::ContextMenuItem::ContextMenuItem):
        (WebCore::ContextMenuItem::~ContextMenuItem):

git-svn-id: svn://svn.chromium.org/blink/trunk@80833 bbb929c8-8fbe-4397-9dbb-9b2b20218538