third_party/WebKit/Source/WebCore/platform/efl/ContextMenuEfl.cpp
@@ -3,7 +3,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
  *  Copyright (C) 2007 Holger Hans Peter Freyther
  *  Copyright (C) 2008 INdT - Instituto Nokia de Tecnologia
  *  Copyright (C) 2009-2010 ProFUSION embedded systems
- *  Copyright (C) 2009-2010 Samsung Electronics
+ *  Copyright (C) 2011 Samsung Electronics
  *
  *  This library is free software; you can redistribute it and/or
  *  modify it under the terms of the GNU Lesser General Public
@@ -27,19 +27,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebCore {
 
+#if USE(CROSS_PLATFORM_CONTEXT_MENUS)
 ContextMenu::ContextMenu(void* menu)
 {
-#if USE(CROSS_PLATFORM_CONTEXT_MENUS)
     getContextMenuItems(menu, m_items);
-#endif
 }
 
-ContextMenu::ContextMenu()
-{
-    notImplemented();
-}
-
-#if USE(CROSS_PLATFORM_CONTEXT_MENUS)
 void ContextMenu::getContextMenuItems(void* menu, Vector<ContextMenuItem>& items)
 {
     notImplemented();
@@ -54,6 +47,11 @@ void* ContextMenu::createNativeMenuFromItems(const Vector<ContextMenuItem>& item
 void* ContextMenu::nativeMenu() const
 {
     return createNativeMenuFromItems(m_items);
+}
+#else
+ContextMenu::ContextMenu()
+{
+    notImplemented();
 }
 #endif
 
