third_party/WebKit/Source/WebCore/platform/efl/ContextMenuItemEfl.cpp
@@ -4,7 +4,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
  * Copyright (C) 2007 Staikos Computing Services Inc. <info@staikos.net>
  * Copyright (C) 2008 INdT - Instituto Nokia de Tecnologia
  * Copyright (C) 2009-2010 ProFUSION embedded systems
- * Copyright (C) 2009-2010 Samsung Electronics
+ * Copyright (C) 2011 Samsung Electronics
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -35,6 +35,13 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebCore {
 
+#if USE(CROSS_PLATFORM_CONTEXT_MENUS)
+void* ContextMenuItem::nativeMenuItem() const
+{
+    notImplemented();
+    return 0;
+}
+#else
 ContextMenuItem::ContextMenuItem(ContextMenuItemType, ContextMenuAction, const String&, ContextMenu*)
 {
     notImplemented();
@@ -44,14 +51,6 @@ ContextMenuItem::~ContextMenuItem()
 {
     notImplemented();
 }
-
-#if USE(CROSS_PLATFORM_CONTEXT_MENUS)
-void* ContextMenuItem::nativeMenuItem() const
-{
-    notImplemented();
-    return 0;
-}
-#endif
 
 ContextMenuItemType ContextMenuItem::type() const
 {
@@ -96,5 +95,5 @@ void ContextMenuItem::setSubMenu(ContextMenu*)
 {
     notImplemented();
 }
-
+#endif
 }
